test/loop/confidence/errors/module_errors_5.loop
# Errors in pattern matching functions

module a.

